--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "bootstrap": "=3.3.7",
     "slick-carousel": "^1.6.0",
-    "fancybox": "^2.1.5"
+    "fancybox": "^2.1.5",
+    "masonry": "^4.1.1"
   },
   "main": "index.html"
 }
