--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "bootstrap": "=3.3.7",
     "slick-carousel": "^1.6.0",
     "fancybox": "^2.1.5",
-    "masonry": "^4.1.1"
+    "masonry": "^4.1.1",
+    "odometer": "^0.4.7"
   },
   "main": "index.html"
 }
