--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "del": "^1.1.1",
     "gulp": "3.*",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-changed": "^2.0.0",
     "gulp-clean-css": "~2.0.8",
     "gulp-collector": "^0.1.0",
     "gulp-concat": "^2.5.2",
@@ -14,12 +15,13 @@
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.0.1",
     "gulp-rename": "^1.2.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^1.12.0",
     "gulp-uglify": "^1.1.0",
+    "js-yaml": "^3.8.2",
     "minimist": "^1.2.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.12.8",
+    "browser-sync": "^2.18.12",
     "gulp-open": "^0.3.2"
   },
   "scripts": {
