--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "slick-carousel": "^1.6.0",
     "fancybox": "^2.1.5",
     "masonry": "^4.1.1",
-    "odometer": "^0.4.7"
+    "odometer": "^0.4.7",
+    "retina.js": "^2.1.2"
   },
   "main": "index.html"
 }
