--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "del": "^1.1.1",
     "gulp": "3.*",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-changed": "^2.0.0",
+    "gulp-cached": "^1.1.1",
+    "gulp-changed": "^3.0.0",
     "gulp-clean-css": "~2.0.8",
     "gulp-collector": "^0.1.0",
     "gulp-concat": "^2.5.2",
+    "gulp-filter": "^5.0.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
+    "gulp-jade-inheritance": "^0.5.5",
     "gulp-less": "^3.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.12.0",
