--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "fancybox": "^2.1.5",
     "masonry": "^4.1.1",
     "odometer": "^0.4.7",
-    "retina.js": "^2.1.2"
+    "retina.js": "^2.1.2",
+    "jquery.scrollbar": "^0.2.11"
   },
   "main": "index.html"
 }
