--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "masonry": "^4.1.1",
     "retina.js": "^2.1.2",
     "jquery.scrollbar": "^0.2.11",
-    "packery": "^2.1.2"
+    "packery": "^2.1.2",
+    "swiper": "^4.5.0"
   },
   "main": "index.html"
 }
