--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "browser-sync": "^2.18.12",
     "gulp-open": "^0.3.2"
   },
+  "resolutions": {
+    "graceful-fs": "^4.2.9"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
