--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "retina.js": "^2.1.2",
     "jquery.scrollbar": "^0.2.11",
     "packery": "^2.1.2",
-    "swiper": "^4.5.0"
+    "swiper": "^4.5.0",
+    "jquery.easing": "jquery-easing-original#^1.4.2"
   },
   "main": "index.html"
 }
